fix:footer alignment issue resolved

--- a/docs/assets/css/default.css
+++ b/docs/assets/css/default.css
@@ -1528,6 +1528,14 @@ img.communityday-sponsor-small {
 }
 
 @media only screen and (min-width: 360px) and (max-width: 480px) {
+    .footer-pad {
+        padding-inline-start: 1px; 
+    }
+
+    .footer-menu ul li a {
+        color: white;
+        margin: 0 14px;
+        position: relative; }
 
     .info-list {
         list-style: none;
